fixed the names of the database.  Also corrected the names to be more dev and prod specfic.  Also using Chris's data for loading mojos.

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 console: true
 org: tonyhsieh
-app: aws-node-http-api-project
-service: aws-node-http-api-project
+app: aws-api
+service: aws-api
 frameworkVersion: '3'
 
 provider:
