--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "serverless-dotenv-plugin": "^4.0.0",
     "serverless-offline": "^8.7.0",
     "serverless-plugin-include-dependencies": "^5.0.0"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
+    "dotenv": "^16.0.0",
     "node-fetch": "^2.6.7"
   }
 }
