--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
     "dotenv": "^16.0.0",
+    "ethers": "^5.6.4",
     "node-fetch": "^2.6.7"
   }
 }
