Updated to match the new sprouter contract process.  Fixed problems in the code with not JSON.stringfying the body of my output.  This caused a LOT of problems.  Also got by with the new 3.18 version of serverless.

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-console: true
+console: true 
 org: tonyhsieh
 app: aws-api
 service: aws-api
@@ -44,6 +44,12 @@ functions:
       - httpApi:
           path: /mojo-seed/action/sprout/{id}
           method: put 
+  getMojos: 
+    handler: getMojos.getMojos
+    events:
+      - httpApi:
+          path: /mojos
+          method: get
 
 
 resources:
