Consolidate all of the MojoSeed functions into one file.  It seemed like there was a problem with too many different files.  Wasted a lot of time on that.  Also add the claimMojoSeed function which uses the MerkelTree and MerkelProof.  AND in the serverless.yml and the claimMojoSeed, I started using the GSI as well as conditional search parameters with DocumentClient.query() functions.  A little strange but there is a basic pattern in the claimMojoSeed as an example.  A LOT OF WORK to figure this out.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "serverless-dotenv-plugin": "^4.0.0",
+    "serverless-esbuild": "^1.30.0",
     "serverless-offline": "^8.8.0",
     "serverless-plugin-include-dependencies": "^5.0.0"
   },
@@ -8,6 +9,8 @@
     "@alch/alchemy-web3": "^1.4.2",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
     "node-fetch": "^2.6.7"
   }
 }
