Put all Mojo related code into one mojo.js file.  Added the getMojoOpensea code for the OpenSea Asset retrieval but commented it out because I don't have the OpenSea API key and it is useless.  Also modified the serverless.yml to match changes.

--- a/serverless.yml
+++ b/serverless.yml
@@ -39,10 +39,16 @@ package:
 
 functions:
   getMojo: 
-    handler: getMojo.getMojo
+    handler: mojo.getMojo
     events:
       - httpApi:
           path: /mojo/metadata/{id}
+          method: get
+  getMojoOpensea: 
+    handler: mojo.getMojoOpensea
+    events:
+      - httpApi:
+          path: /mojo/opensea/{id}
           method: get
   getMojoSeed: 
     handler: mojoSeed.getMojoSeed
