--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
+    "csv-stringify": "^6.1.3",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "keccak256": "^1.0.6",
