Changed the esbuild config - got rid of sourcemap: true.  It made it smaller?  Also added a limit to the input. It just slices it at the 100 mark.

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-console: true 
+#console: true 
 org: tonyhsieh
 app: aws-api
 service: aws-api
@@ -177,10 +177,10 @@ custom:
   esbuild:
     bundle: true
     minify: true
-    sourcemap: true
+    #sourcemap: true
     exclude: 'aws-sdk'
     target: node14
-    define:
-      'require.resolve': undefined
+    #define:
+    #  'require.resolve': undefined
     platform: node
     concurrency: 10
