I switched getMojos to being a POST instead of GET.  I'm not totally for this idea but WHATEVER.

--- a/serverless.yml
+++ b/serverless.yml
@@ -51,8 +51,8 @@ functions:
     handler: mojo.getMojos
     events:
       - httpApi:
-          path: /mojos/metadata/{id}
-          method: get
+          path: /mojos/metadata
+          method: post
   getMojoPfp: 
     handler: mojo.getMojoPfp
     events:
