--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,3 @@
-#console: true 
 org: tonyhsieh
 app: aws-api
 service: aws-api
@@ -6,7 +5,7 @@ frameworkVersion: '3'
 
 provider:
   name: aws
-  runtime: nodejs14.x
+  runtime: nodejs16.x
   deploymentMethod: direct
   environment:
     DYNAMODB_MOJO_TABLE: ${self:service}-mojoTable-${sls:stage}
@@ -61,6 +60,18 @@ functions:
       - httpApi:
           path: /mojo/pfp/{id}
           method: get
+  updateMojoGameStats: 
+    handler: mojo.updateMojoGameStats
+    events:
+      - httpApi:
+          path: /mojo/action/update
+          method: post
+  clearMojoGameStats: 
+    handler: mojo.clearMojoGameStats
+    events:
+      - httpApi:
+          path: /mojo/action/clear/{id}
+          method: put
   getMojoSeed: 
     handler: mojoSeed.getMojoSeed
     events:
@@ -198,7 +209,7 @@ custom:
     minify: true
     #sourcemap: true
     exclude: 'aws-sdk'
-    target: node14
+    target: node16
     #define:
     #  'require.resolve': undefined
     platform: node
