Added for the Golden Mojo API

--- a/serverless.yml
+++ b/serverless.yml
@@ -126,6 +126,12 @@ functions:
       - httpApi:
           path: /champions/metadata
           method: post
+  getGoldenMojoItem: 
+    handler: mojoSeed.getGoldenMojoItem
+    events:
+      - httpApi:
+          path: /collectible/golden-mojo-item/metadata/{id}
+          method: get
 
 
 
