--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "serverless-dotenv-plugin": "^4.0.0",
     "serverless-esbuild": "^1.30.0",
     "serverless-offline": "^8.8.0",
-    "serverless-plugin-include-dependencies": "^5.0.0"
+    "serverless-plugin-include-dependencies": "^5.0.0",
+    "serverless-prune-plugin": "^2.0.2"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
