--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ provider:
   name: aws
   runtime: nodejs18.x
   deploymentMethod: direct
+  versionFunctions: false
   environment:
     DYNAMODB_MOJO_TABLE: ${self:service}-mojoTable-${sls:stage}
     DYNAMODB_MODABLEMOJO_TABLE: ${self:service}-modablemojoTable-${sls:stage}
@@ -339,6 +340,7 @@ plugins:
   - serverless-plugin-include-dependencies
   - serverless-dotenv-plugin
   - serverless-esbuild
+  - serverless-prune-plugin
 
 custom:
   esbuild:
